Karantina Başlığı değişti

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "clean": "gatsby clean",
-    "deploy": "gatsby build && gh-pages -d public -b gh-pages"
+    "deploy": "rm -rf node_modules/gh-pages/.cache && gatsby build && gh-pages -d public -b gh-pages"
   },
   "dependencies": {
     "gatsby": "^2.21.22",
