--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "gatsby": "^2.21.22",
+    "gatsby-cli": "^2.12.96",
     "gatsby-theme-blog": "^1.5.22",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
